# termshare

./: LICENSE  README.md  termshare.cabal
src/: Main.hs
static/: hterm_all.js  index.html  index.js  style.css
