name:           termshare
version:        0.1.0.0
description:    
homepage:       
bug-reports:    
author:         Tobias Dammers
maintainer:     tdammers@gmail.com
copyright:      2018 Tobias Dammers
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/tdammers/termshare

executable termshare
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , async
               , bytestring
               , file-embed
               , http-types
               , text
               , utf8-string
               , wai
               , wai-websockets
               , warp
               , websockets
  other-modules:
  default-language: Haskell2010
